--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -582,6 +582,34 @@ video {
   position: relative;
 }
 
+.-right-80 {
+  right: -20rem;
+}
+
+.-top-12 {
+  top: -3rem;
+}
+
+.-top-16 {
+  top: -4rem;
+}
+
+.-top-24 {
+  top: -6rem;
+}
+
+.-top-7 {
+  top: -1.75rem;
+}
+
+.-top-8 {
+  top: -2rem;
+}
+
+.bottom-4 {
+  bottom: 1rem;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -598,6 +626,10 @@ video {
   right: 0px;
 }
 
+.right-2 {
+  right: 0.5rem;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -606,192 +638,12 @@ video {
   top: 4rem;
 }
 
-.top-\[85\%\] {
-  top: 85%;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.-top-10 {
-  top: -2.5rem;
-}
-
-.-top-5 {
-  top: -1.25rem;
-}
-
-.-top-24 {
-  top: -6rem;
-}
-
-.-top-12 {
-  top: -3rem;
-}
-
-.-top-2 {
-  top: -0.5rem;
-}
-
-.-top-0 {
-  top: -0px;
-}
-
-.-top-3 {
-  top: -0.75rem;
-}
-
-.-top-4 {
-  top: -1rem;
-}
-
-.-top-6 {
-  top: -1.5rem;
-}
-
-.-top-8 {
-  top: -2rem;
-}
-
-.-top-7 {
-  top: -1.75rem;
-}
-
-.top-4 {
-  top: 1rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
 .top-24 {
   top: 6rem;
 }
 
-.top-96 {
-  top: 24rem;
-}
-
-.top-80 {
-  top: 20rem;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.-top-20 {
-  top: -5rem;
-}
-
-.-top-16 {
-  top: -4rem;
-}
-
-.-top-28 {
-  top: -7rem;
-}
-
-.left-1 {
-  left: 0.25rem;
-}
-
-.left-1\/3 {
-  left: 33.333333%;
-}
-
-.left-2\/3 {
-  left: 66.666667%;
-}
-
-.left-full {
-  left: 100%;
-}
-
-.right-full {
-  right: 100%;
-}
-
-.-right-full {
-  right: -100%;
-}
-
-.-right-1 {
-  right: -0.25rem;
-}
-
-.-right-1\/3 {
-  right: -33.333333%;
-}
-
-.-right-1\/2 {
-  right: -50%;
-}
-
-.-right-4 {
-  right: -1rem;
-}
-
-.-right-48 {
-  right: -12rem;
-}
-
-.-right-5 {
-  right: -1.25rem;
-}
-
-.-right-52 {
-  right: -13rem;
-}
-
-.-right-56 {
-  right: -14rem;
-}
-
-.-right-60 {
-  right: -15rem;
-}
-
-.-right-8 {
-  right: -2rem;
-}
-
-.-right-80 {
-  right: -20rem;
-}
-
-.right-3 {
-  right: 0.75rem;
-}
-
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
-.bottom-4 {
-  bottom: 1rem;
-}
-
-.z-30 {
-  z-index: 30;
+.top-\[85\%\] {
+  top: 85%;
 }
 
 .z-10 {
@@ -802,30 +654,12 @@ video {
   z-index: 20;
 }
 
+.z-30 {
+  z-index: 30;
+}
+
 .z-50 {
   z-index: 50;
-}
-
-.float-start {
-  float: inline-start;
-}
-
-.m-10 {
-  margin: 2.5rem;
-}
-
-.m-5 {
-  margin: 1.25rem;
-}
-
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-}
-
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 
 .mx-auto {
@@ -833,69 +667,31 @@ video {
   margin-right: auto;
 }
 
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
 .my-7 {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mt-40 {
-  margin-top: 10rem;
-}
-
-.mt-32 {
-  margin-top: 8rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-28 {
-  margin-top: 7rem;
-}
-
-.mt-24 {
-  margin-top: 6rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mb-20 {
-  margin-bottom: 5rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-28 {
-  margin-bottom: 7rem;
 }
 
 .mb-24 {
   margin-bottom: 6rem;
 }
 
-.me-8 {
-  margin-inline-end: 2rem;
+.mt-24 {
+  margin-top: 6rem;
 }
 
-.mr-8 {
-  margin-right: 2rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .line-clamp-2 {
@@ -921,175 +717,58 @@ video {
   display: none;
 }
 
-.size-7 {
-  width: 1.75rem;
-  height: 1.75rem;
-}
-
 .size-6 {
   width: 1.5rem;
   height: 1.5rem;
 }
 
-.h-\[84px\] {
-  height: 84px;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-full {
-  height: 100%;
+.size-7 {
+  width: 1.75rem;
+  height: 1.75rem;
 }
 
 .h-80 {
   height: 20rem;
 }
 
-.h-\[calc\(\)\] {
-  height: calc();
+.h-\[84px\] {
+  height: 84px;
 }
 
-.h-\[11\] {
-  height: 11;
+.h-full {
+  height: 100%;
 }
 
-.h-\[110vh\] {
-  height: 110vh;
-}
-
-.h-\[120vh\] {
-  height: 120vh;
-}
-
-.h-\[140vh\] {
-  height: 140vh;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[1\] {
-  height: 1;
-}
-
-.h-\[115vh\] {
-  height: 115vh;
-}
-
-.h-\[11vh\] {
-  height: 11vh;
-}
-
-.min-h-screen {
-  min-height: 100vh;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
+.h-screen {
+  height: 100vh;
 }
 
 .w-2\/3 {
   width: 66.666667%;
 }
 
-.w-20 {
-  width: 5rem;
-}
-
 .w-28 {
   width: 7rem;
-}
-
-.w-60 {
-  width: 15rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-32 {
-  width: 8rem;
 }
 
 .w-36 {
   width: 9rem;
 }
 
-.w-44 {
-  width: 11rem;
-}
-
-.w-min {
-  width: -moz-min-content;
-  width: min-content;
+.w-40 {
+  width: 10rem;
 }
 
 .w-56 {
   width: 14rem;
 }
 
-.w-screen {
-  width: 100vw;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[2\] {
-  width: 2;
-}
-
-.w-\[200\] {
-  width: 200;
-}
-
-.w-\[200wh\] {
-  width: 200wh;
-}
-
-.w-\[1400px\] {
-  width: 1400px;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-5 {
-  width: 1.25rem;
+.w-full {
+  width: 100%;
 }
 
 .max-w-\[1360px\] {
   max-width: 1360px;
-}
-
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[810px\] {
-  max-width: 810px;
-}
-
-.max-w-\[0px\] {
-  max-width: 0px;
 }
 
 .max-w-\[630px\] {
@@ -1101,26 +780,8 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-1\/2 {
-  --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-1\/3 {
-  --tw-translate-x: -33.333333%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .cursor-pointer {
   cursor: pointer;
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-cols-1 {
@@ -1139,64 +800,36 @@ video {
   justify-content: space-between;
 }
 
-.justify-around {
-  justify-content: space-around;
-}
-
 .gap-10 {
   gap: 2.5rem;
-}
-
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-5 {
-  gap: 1.25rem;
-}
-
-.gap-16 {
-  gap: 4rem;
 }
 
 .gap-20 {
   gap: 5rem;
 }
 
-.overflow-hidden {
-  overflow: hidden;
+.gap-8 {
+  gap: 2rem;
 }
 
-.overflow-visible {
-  overflow: visible;
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .scroll-smooth {
   scroll-behavior: smooth;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
 .rounded-3xl {
   border-radius: 1.5rem;
 }
 
-.border-2 {
-  border-width: 2px;
+.rounded-full {
+  border-radius: 9999px;
 }
 
-.border {
-  border-width: 1px;
+.border-2 {
+  border-width: 2px;
 }
 
 .border-b {
@@ -1212,14 +845,6 @@ video {
   border-color: rgb(18 247 255 / var(--tw-border-opacity));
 }
 
-.border-\[\] {
-  border-color: ;
-}
-
-.border-\[\#\] {
-  border-color: #;
-}
-
 .bg-\[\#12f7ff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(18 247 255 / var(--tw-bg-opacity));
@@ -1230,72 +855,9 @@ video {
   background-color: rgb(29 0 44 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#1d00c\] {
-  background-color: #1d00c;
-}
-
-.bg-\[\@\] {
-  background-color: @;
-}
-
-.bg-\[\#\] {
-  background-color: #;
-}
-
-.bg-\[\#1d\] {
-  background-color: #1d;
-}
-
-.bg-\[\#1d002\] {
-  background-color: #1d002;
-}
-
-.bg-\[\#1sd002c\] {
-  background-color: #1sd002c;
-}
-
-.bg-\[\#1da002c\] {
-  background-color: #1da002c;
-}
-
-.bg-\[\] {
-  background-color: ;
-}
-
-.bg-\[12f7ff\] {
-  background-color: 12f7ff;
-}
-
-.bg-\[\#19\] {
-  background-color: #19;
-}
-
-.bg-\[\#19eb\] {
-  background-color: #19eb;
-}
-
-.bg-\[\#19eeb\] {
-  background-color: #19eeb;
-}
-
-.bg-\[\#19eeb9\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(25 238 185 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#194eb9\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(25 78 185 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
 }
 
 .object-cover {
@@ -1308,28 +870,12 @@ video {
      object-fit: fill;
 }
 
-.object-scale-down {
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
-}
-
-.object-left {
-  -o-object-position: left;
-     object-position: left;
-}
-
-.object-right {
-  -o-object-position: right;
-     object-position: right;
-}
-
-.object-center {
-  -o-object-position: center;
-     object-position: center;
-}
-
 .p-10 {
   padding: 2.5rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-5 {
@@ -1340,14 +886,6 @@ video {
   padding: 2rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1356,28 +894,6 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.pl-8 {
-  padding-left: 2rem;
-}
-
-.pr-8 {
-  padding-right: 2rem;
-}
-
-.pr-0 {
-  padding-right: 0px;
 }
 
 .pl-5 {
@@ -1420,11 +936,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -1450,6 +961,11 @@ video {
   font-weight: 600;
 }
 
+.text-\[\#04cf37\] {
+  --tw-text-opacity: 1;
+  color: rgb(4 207 55 / var(--tw-text-opacity));
+}
+
 .text-\[\#12f7ff\] {
   --tw-text-opacity: 1;
   color: rgb(18 247 255 / var(--tw-text-opacity));
@@ -1463,15 +979,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-\[\#04cf37\] {
-  --tw-text-opacity: 1;
-  color: rgb(4 207 55 / var(--tw-text-opacity));
 }
 
 .mix-blend-screen {
@@ -1507,37 +1014,24 @@ video {
   transition-duration: 150ms;
 }
 
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
 
-.hover\:translate-x-2:hover {
-  --tw-translate-x: 0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:translate-y-2:hover {
-  --tw-translate-y: 0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 .hover\:-translate-y-2:hover {
   --tw-translate-y: -0.5rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-translate-y-4:hover {
-  --tw-translate-y: -1rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-translate-y-3:hover {
-  --tw-translate-y: -0.75rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-translate-x-2:hover {
-  --tw-translate-x: -0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1551,18 +1045,14 @@ video {
   background-color: rgb(29 0 44 / var(--tw-bg-opacity));
 }
 
-.hover\:text-\[\#1d002c\]:hover {
-  --tw-text-opacity: 1;
-  color: rgb(29 0 44 / var(--tw-text-opacity));
-}
-
-.hover\:text-\[\#1d002c\#12f7ff\]:hover {
-  color: #1d002c#12f7ff;
-}
-
 .hover\:text-\[\#12f7ff\]:hover {
   --tw-text-opacity: 1;
   color: rgb(18 247 255 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#1d002c\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(29 0 44 / var(--tw-text-opacity));
 }
 
 .hover\:shadow-blur:hover {
@@ -1623,37 +1113,12 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:p-10 {
-    padding: 2.5rem;
-  }
-
-  .md\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
   .md\:pl-10 {
     padding-left: 2.5rem;
   }
 }
 
-@media (min-width: 1024px) {
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-}
-
 @media (min-width: 1280px) {
-  .xl\:max-w-min {
-    max-width: -moz-min-content;
-    max-width: min-content;
-  }
-
-  .xl\:max-w-max {
-    max-width: -moz-max-content;
-    max-width: max-content;
-  }
-
   .xl\:max-w-none {
     max-width: none;
   }
