--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1014,20 +1014,8 @@ video {
   transition-duration: 150ms;
 }
 
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .duration-300 {
   transition-duration: 300ms;
-}
-
-.duration-500 {
-  transition-duration: 500ms;
 }
 
 .hover\:-translate-y-2:hover {
@@ -1043,6 +1031,11 @@ video {
 .hover\:bg-\[\#1d002c\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(29 0 44 / var(--tw-bg-opacity));
+}
+
+.hover\:hover\:bg-\[\#12f7ff\]:hover:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 247 255 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#12f7ff\]:hover {
